--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 max-line-length=120
 filename=*.py,*.py.dev
 exclude=./env/*,./config/*,./fab*,.git/*,static/bower/*,sitestatic/bower/,*/gen/*
-ignore=E501,F405,T003,E203,W503
+ignore=E501,F405,T003,E203,W503,T001
 
 [isort]
 multi_line_output = 3
